--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,9 @@ and open the template in the editor.
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href='/dummy'>Dummy</a>
+                        </li>
 <!--                        <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
