--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,17 +22,13 @@ and open the template in the editor.
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/data">Database</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="navbar-brand" aria-current="page" href='/dummy'>Dummy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href='/dummy'>Dummy</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                 </div>
             </div>
